signup/login nav

--- a/index.html
+++ b/index.html
@@ -117,47 +117,52 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <h3>Get in touch</h3>
-
-        <form action="#" method="post">
-          <div class="field half first">
-            <label for="name">Name</label>
-            <input name="name" id="name" type="text" placeholder="Name" />
-          </div>
-          <div class="field half">
-            <label for="email">Email</label>
-            <input name="email" id="email" type="email" placeholder="Email" />
-          </div>
-          <div class="field">
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              rows="6"
-              placeholder="Message"
-            ></textarea>
-          </div>
-          <ul class="actions">
-            <li>
-              <input value="Send Message" class="button alt" type="submit" />
-            </li>
-          </ul>
-        </form>
-
-        <div class="copyright">
-          &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
-          Images: <a href="https://unsplash.com">Unsplash</a>.
-        </div>
-      </div>
-    </footer>
-
     <div id="user-modal" class="modal-bg">
       <div class="modal">
         <span id="close-icon" class="icon fa fa-times-circle"></span>
-        <section class="user-form">
+        <section class="user-form-nav">
+          <ul>
+            <li id="login-cta">Login</li>
+            <li id="signup-cta">Sign up</li>
+          </ul>
+        </section>
+        <section id="signup-form-container" class="user-form">
+          <form action="#" method="post">
+            <div class="field">
+              <label for="signupemail">Email</label>
+              <input
+                name="signupemail"
+                id="signupemail"
+                type="email"
+                placeholder="Email"
+              />
+            </div>
+            <div class="field half">
+              <label for="signuppassword">Password</label>
+              <input
+                name="signuppassword"
+                id="signuppassword"
+                type="password"
+                placeholder="Password"
+              />
+            </div>
+            <div class="field half">
+              <label for="confirmpassword">Confirm Password</label>
+              <input
+                name="confirmpassword"
+                id="confirmpassword"
+                type="password"
+                placeholder="Confirm Password"
+              />
+            </div>
+            <ul class="actions">
+              <li>
+                <input value="Sign Up" class="button alt" type="submit" />
+              </li>
+            </ul>
+          </form>
+        </section>
+        <section id="login-form-container" class="user-form active">
           <form action="#" method="post">
             <div class="field half first">
               <label for="email">Email</label>
