--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         >
         <nav id="nav">
           <a href="index.html">Home</a>
-          <a href="generic.html">Diet Plan</a>
+          <a href="diet-plan.html">Diet Plan</a>
           <a
             data-target="calculator-modal"
             onclick="openModal(event)"
