Update existing session info to BE on login

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -19,7 +19,14 @@
           ><strong>Fitness Partner</strong>- Your Personal Companion</a
         >
         <nav id="nav">
-          <a href="index.html">Home</a>
+		  <a href="index.html">Home</a>
+		  <a
+            data-target="user-modal"
+            onclick="openModal(event)"
+            href="javascript:void(0);"
+            id="session-info"
+            >Login</a
+          >
         </nav>
         <a href="#navPanel" class="navPanelToggle"
           ><span class="fa fa-bars"></span
