Error handling and styling

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -194,6 +194,9 @@
 				<li>
 				  <input value="Sign Up" class="button alt" type="submit" />
 				</li>
+				<li id="signup-form-error" class="error">
+				  Something went wrong
+				</li>
 			  </ul>
 			</form>
 		  </section>
@@ -215,6 +218,9 @@
 			  <ul class="actions">
 				<li>
 				  <input value="Sign in" class="button alt" type="submit" />
+				</li>
+				<li id="login-form-error" class="error">
+				  Incorrect username/password
 				</li>
 			  </ul>
 			</form>
