--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <footer>
-          <a href="#" class="button">Get Started</a>
+          <a href="/diet-plan.html" class="button">Get Started</a>
         </footer>
       </div>
     </section>
@@ -99,7 +99,7 @@
               If you think lifting is dangerous, try being weak. ...
             </p>
             <footer>
-              <a href="#" class="button">Learn More</a>
+              <a href="/diet-plan.html" class="button">Learn More</a>
             </footer>
           </article>
           <article>
@@ -121,7 +121,7 @@
               Eat Healthy, Stay Healthy!
             </p>
             <footer>
-              <a href="#" class="button">Learn More</a>
+              <a href="/diet-plan.html" class="button">Learn More</a>
             </footer>
           </article>
         </div>
@@ -235,6 +235,9 @@
               <li>
                 <input value="Sign Up" class="button alt" type="submit" />
               </li>
+              <li id="signup-form-error" class="error">
+                Something went wrong
+              </li>
             </ul>
           </form>
         </section>
@@ -256,6 +259,9 @@
             <ul class="actions">
               <li>
                 <input value="Sign in" class="button alt" type="submit" />
+              </li>
+              <li id="login-form-error" class="error">
+                Incorrect username/password
               </li>
             </ul>
           </form>
